--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lucas</title>
     <script src="./dist/web3.min.js" onload="console.log('yeah')"></script>
+    <script src="./dist/bundle.js"></script>
 </head>
 <body>
     <main>
